Map interactions for Add Station flow #12

--- a/templates/adminstationperm.html
+++ b/templates/adminstationperm.html
@@ -165,7 +165,7 @@
                             <input type="submit" class="btn btn-primary" name="action" value="Update">
                             <input type="submit" class="btn btn-danger" name="action" value="Delete">
                             {% end %}
-                            <a href="/admin/stations" class="btn btn-outline-primary" role="button">Cancel</a>
+                            <a href="/admin/stations" class="btn btn-secondary" role="button">Cancel</a>
                         </div>
                     </div>
                     <!-- lat/long fields updated by dragging the map marker -->
