--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -146,7 +146,7 @@
                     <input type="submit" class="btn btn-primary" name="action" value="Update">
                     <input type="submit" class="btn btn-danger" name="action" value="Delete">
                     {% end %}
-                    <a href="/admin/events" class="btn btn-outline-primary" role="button">Cancel</a>
+                    <a href="/admin/events" class="btn btn-secondary" role="button">Cancel</a>
                 </div>
             </div>
         </form>
