--- a/templates/base-map.html
+++ b/templates/base-map.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content-variant %}
 
+<!--suppress HtmlUnknownTarget -->
 <nav id="header" class="navbar navbar-expand-lg px-3 px-sm-5 bg-body-tertiary border-bottom">
     <a class="navbar-brand" href="/"><img src="/img/rsgb-logo.png" id="rsgb-logo" alt="RSGB Logo"/><span id="site-title">Youth Map</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -11,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav" style="margin-left: auto;">
             <li class="nav-item ps-2">
-                <button class="btn btn-primary my-2 my-sm-0" onClick="alert('TODO');">Add your station</button>
+                <button type="button" class="btn btn-primary my-2 my-sm-0" data-bs-toggle="modal" data-bs-target="#addStationModal1">Add your station</button>
             </li>
             <li class="nav-item ps-4">
                 <a class="nav-link" href="/login">Admin</a>
