--- a/templates/base-std.html
+++ b/templates/base-std.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content-variant %}
 
+<!--suppress HtmlUnknownTarget -->
 <nav id="header" class="navbar navbar-expand-lg mb-5 px-3 px-sm-5 bg-body-tertiary border-bottom">
     <a class="navbar-brand" href="/"><img src="/img/rsgb-logo.png" id="rsgb-logo" alt="RSGB Logo"/><span id="site-title">Youth Map</span></a>
 </nav>
