--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
 
     <title>YouthMap</title>
 
+    <!--suppress HtmlUnknownTarget -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.css" rel="stylesheet"/>
