--- a/templates/editstation.html
+++ b/templates/editstation.html
@@ -222,7 +222,7 @@
                         <div class="col-sm-8">
                             <input type="submit" class="btn btn-primary" name="action" value="Update">
                             <input type="submit" class="btn btn-danger" name="action" value="Delete">
-                            <a href="/view/station/{{ type2 }}/{{ station.id }}" class="btn btn-outline-primary" role="button">Cancel</a>
+                            <a href="/view/station/{{ type2 }}/{{ station.id }}" class="btn btn-secondary" role="button">Cancel</a>
                         </div>
                     </div>
 
@@ -242,7 +242,8 @@
 <script type="importmap">
     {
       "imports": {
-        "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js"
+        "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js",
+        "leaflet-extra-markers": "https://unpkg.com/leaflet-extra-markers@2.0.1/src/index.js"
       }
     }
 </script>
