--- a/templates/admin.html
+++ b/templates/admin.html
@@ -50,6 +50,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/events">Manage events</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Manage permenent station types</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Manage uploads</a>
+                    </li>
                 </ul>
             </div>
         </div>
