Added log view button to super admin controls
Button is also loopback. Logs to be added later.

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -71,6 +71,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/users">Manage users</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">View Logs</a>
+                    </li>
                 </ul>
             </div>
         </div>
