--- a/templates/adminuser.html
+++ b/templates/adminuser.html
@@ -66,7 +66,7 @@
                     <input type="submit" class="btn btn-primary" name="action" value="Update">
                     <input type="submit" class="btn btn-danger" name="action" value="Delete">
                     {% end %}
-                    <a href="/admin/users" class="btn btn-secondary" role="button">Cancel</a>
+                    <a href="/admin" class="btn btn-secondary" role="button">Cancel</a>
                 </div>
             </div>
         </form>
