--- a/templates/admin.html
+++ b/templates/admin.html
@@ -51,10 +51,7 @@
                         <a class="nav-link" href="/admin/events">Manage events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">Manage permenent station types</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin">Manage uploads</a>
+                        <a class="nav-link" href="/admin">Stations awaiting approval</a>
                     </li>
                 </ul>
             </div>
@@ -70,6 +67,12 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/users">Manage users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Manage permenent station types</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Manage uploads</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">View Logs</a>
