--- a/templates/base-map.html
+++ b/templates/base-map.html
@@ -4,7 +4,7 @@
 <!--suppress HtmlUnknownTarget -->
 <nav id="header" class="navbar navbar-expand-lg px-3 px-sm-5 bg-body-tertiary border-bottom">
     <a class="navbar-brand" href="/"><img src="/img/rsgb-logo.png" id="rsgb-logo" alt="RSGB Logo"/><span id="site-title">Youth Map</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
