Interstitial "station type" page for the add station flow. #12

--- a/templates/map.html
+++ b/templates/map.html
@@ -18,7 +18,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" id="addStationGetStarted" class="btn btn-primary" data-bs-dismiss="modal">Get started!</button>
+                <button type="button" id="addStationGetStarted" class="btn btn-primary" data-bs-dismiss="modal">Get
+                    started!
+                </button>
             </div>
         </div>
     </div>
@@ -32,12 +34,16 @@
                 <h1 class="modal-title fs-5" id="addStationModal2Title">Add Station</h1>
             </div>
             <div class="modal-body">
-                TODO
+                If you're happy with this location, click "Set up my station!" to continue with adding it. Otherwise,
+                you can reposition the marker, or cancel the process.
             </div>
             <div class="modal-footer">
-                <button type="button" id="addStationCancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" id="addStationCancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                </button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">I need to reposition</button>
-                <button type="button" id="addStationSetUp" class="btn btn-primary" data-bs-dismiss="modal">Set up my station!</button>
+                <button type="button" id="addStationSetUp" class="btn btn-primary" data-bs-dismiss="modal">Set up my
+                    station!
+                </button>
             </div>
         </div>
     </div>
