Almost finished Create station flow #12

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,14 @@ div.container {
     margin-bottom: 2em;
 }
 
+svg.alert-icon {
+    fill:currentColor;
+    max-width: 1em;
+    max-height: 1em;
+    position: relative;
+    top: -0.1em;
+}
+
 /* MAP */
 
 div.map-container {
