--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 {% if insecure_user_present %}
 <div class="alert alert-danger mb-5" role="alert">
-    <h5 class="alert-heading">This site has not been secured</h5>
+    <h5 class="alert-heading"><svg class="bi flex-shrink-0 me-2 alert-icon" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg> This site has not been secured</h5>
     <p class="mb-0">The default login is username "admin", password "password". Please ensure this user is renamed or replaced
     before this site goes live.</p>
 </div>
