--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            <label for="end_time" class="form-label mt-2">Start time (UTC):</label>
+                            <label for="end_time" class="form-label mt-2">End time (UTC):</label>
                         </div>
                         <div class="col-sm-8">
                             <input id="end_time" class="form-control" name="end_time" type="datetime-local"
@@ -86,14 +86,14 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            <label class="form-label mt-2">Bands:</label>
+                            <label class="form-label">Bands:</label>
                         </div>
                         <div class="col-sm-8">
                             {% for band in all_bands %}
                             <span style="display:inline-block; min-width:5em;">
                     <input type="checkbox" id="band-{{ band.id }}" class="form-check-input" name="bands[]"
                            value="{{ band.id }}"
-                           {% if creating_new or band.id in [x.id for x in station.bands] %}checked{% end %}/>&nbsp;
+                           {% if not creating_new and band.id in [x.id for x in station.bands] %}checked{% end %}/>&nbsp;
                     <label for="band-{{ band.id }}" class="form-check-label">{{ band.name }}</label>
                     </span>
                             {% end %}
@@ -105,14 +105,14 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            <label class="form-label mt-2">Modes:</label>
+                            <label class="form-label">Modes:</label>
                         </div>
                         <div class="col-sm-8">
                             {% for mode in all_modes %}
                             <span style="display:inline-block; min-width:5em;">
                     <input type="checkbox" id="mode-{{ mode.id }}" class="form-check-input" name="modes[]"
                            value="{{ mode.id }}"
-                           {% if creating_new or mode.id in [x.id for x in station.modes] %}checked{% end %}/>&nbsp;
+                           {% if not creating_new and mode.id in [x.id for x in station.modes] %}checked{% end %}/>&nbsp;
                     <label for="mode-{{ mode.id }}" class="form-check-label">{{ mode.name }}</label>
                     </span>
                             {% end %}
@@ -123,7 +123,7 @@
                             <label for="notes" class="form-label mt-2">Notes (optional):</label>
                         </div>
                         <div class="col-sm-8">
-                            <textarea id="notes" class="form-control" name="notes" rows="5">{{ '' if creating_new else station.notes }}</textarea>
+                            <textarea id="notes" class="form-control" name="notes" rows="5">{{ (event.notes_template if event and event.notes_template else '') if creating_new else station.notes }}</textarea>
                         </div>
                     </div>
                     <div class="row mb-2">
